Adding user role for drupal with public key

--- a/main.yml
+++ b/main.yml
@@ -5,9 +5,9 @@
   roles:
     - common
     - user
-    - php
-    - drush
-    - nginx
-    - mysql
-    - drupal
-    - civicrm
+#    - php
+#    - drush
+#    - nginx
+#    - mysql
+#    - drupal
+#    - civicrm
