Adding PHP and Composer Roles

--- a/main.yml
+++ b/main.yml
@@ -5,8 +5,10 @@
   roles:
     - common
     - user
-#    - php
+    - php
+    - composer
 #    - drush
+#    - php
 #    - nginx
 #    - mysql
 #    - drupal
