--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -11,6 +11,7 @@
   with_items:
     - mysql-server-{{mysql_server_version}}
 ###Secure MySQL Installation####
+
 - name: Package for Python MySQL
   apt: pkg="python-mysqldb" state=present
 
@@ -34,3 +35,28 @@
 
 - name: Delete Default database
   mysql_db: login_user=root login_password="{{ mysql_root_pass }}" db=test state=absent
+
+##Create CiviCRM and Drupal DB##
+
+- name: copy .my.cnf file with root password credentials
+  template: src=templates/my.cnf.j2 dest=/root/.my.cnf owner=root mode=0600
+
+- name: Create MySQL DB for Drupal
+  mysql_db: name="{{ mysql_drupal_db_name }}" state=present
+
+- name: Create MySQL DB for CiviCrm
+  mysql_db: name="{{ mysql_civicrm_db_name }}" state=present
+
+- name: Create Drupal MySQL User
+  mysql_user:
+    name: "{{ mysql_drupal_db_user }}"
+    password: "{{ mysql_drupal_db_pass }}"
+    priv: "{{ mysql_drupal_db_name }}.*:ALL"
+    state: present
+
+- name: Create CiviCrm MySQL User
+  mysql_user:
+    name: "{{ mysql_civicrm_db_user }}"
+    password: "{{ mysql_civicrm_db_pass }}"
+    priv: "{{ mysql_civicrm_db_name }}.*:ALL"
+    state: present
