Adding Drupal Role

--- a/roles/user/tasks/main.yml
+++ b/roles/user/tasks/main.yml
@@ -4,7 +4,7 @@
     name: '{{ drupal_admin_system_user }}'
     createhome: yes
     shell: /bin/bash
-    home: '{{ doc_root_path }}'
+    home: '{{ drupal_admin_home }}'
 - name: Add public key to drupal admin user
   authorized_key:
     user: '{{ drupal_admin_system_user }}'
